--- a/responciv.css
+++ b/responciv.css
@@ -15,6 +15,14 @@
     .nav-manue li a{
         font-size: 1.1rem;
     }
+    /* banner tablet responsive */
+    .banner {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .banner-left{
+        margin-top: 70px;
+    }
 }
 
 @media screen and (max-width:425px) {
@@ -22,5 +30,45 @@
         flex-direction: column;
         align-items: center;
         gap: 35px;
+        margin-bottom: 40px ;
+    }
+    .nav-logo{
+        margin-top: 60px;
+    }
+    /* banner mobile responsive */
+    .banner-left h1 {
+        font-size: 3.5rem;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+    .banner-left ul li img{
+        width: 6%;
+        margin-right: 5px;
+    }
+    .banner-left ul li{
+        font-size: 15px;
+        font-weight: 400;
+        margin: 25px 0;
+    }
+     .comon-button{
+        padding: 12px 24px;
+        font-size: 14px;
+
+    }
+    .banner-left h3 {
+        font-size: 2rem;
+        font-weight: 600;
+    }
+    .container{
+        padding: 0 70px;
+    }
+    .banner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    .banner-right{
+        padding-top: 10px;
     }
 }
