--- a/responciv.css
+++ b/responciv.css
@@ -58,8 +58,75 @@
     .games-1{
         margin-bottom: 30px;
     }
-    
+    /* play section responsive */
+    .play-section-1{
+        flex-direction: column;
+        align-items: center;
+    }
+    .play-section-content, .play-section-content-2{
+        text-align: center;
+        width: 100%;
+    }
+    .play-section-content h1{
+        font-size: 35px ;
+        font-weight: 600;
+    }
+    .play-section-content p{
+        text-align: center;
+        font-size: 15px;
+        margin-bottom: 30px;
 
+    }
+    .play-section-img{
+        width: 100%;
+    }
+    .play-section-img .img-1{
+        position: relative;
+        right: -170px;
+        max-width: 70%;
+    }
+    .play-section-img .img-2{
+        position: absolute;
+        left: 70px;
+        bottom: -57px;
+        max-width: 35%;
+        
+    }
+
+    .play-section-2{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+  
+    .play-section-content-2 h1{
+        font-size: 35px ;
+        font-weight: 600;
+        margin: 0 auto;
+        width: 320px;
+    }
+    .play-section-content-2 p{
+        text-align: center;
+        font-size: 15px;
+        width: 350px;
+        margin: 35px auto;
+
+
+    }
+    .play-section-img-3{
+        width: 90%;
+    }
+    .play-section-img-2 .img-3{
+        position: relative;
+        right: -50px;
+        max-width: 70%;
+    }
+    .play-section-img-2 .img-4{
+        position: absolute;
+        right: 35px;
+        bottom: -75px;
+        max-width: 35%;
+        
+    }
 }
 
 
@@ -173,5 +240,61 @@
     .gam-cart h3{
         font-size: 14px;
 
+    }
+    /* play section mobile responsive */
+    .play-section-img .img-1{
+        position: relative;
+        right: -70px;
+        max-width: 80%;
+    }
+    .play-section-img .img-2{
+        position: absolute;
+        left: 10px;
+        bottom: -30px;
+        max-width: 40%;
+        
+    }
+    .play-section-content h1{
+        font-size: 25px ;
+        font-weight: 600;
+    }
+    .play-section-content p{
+        text-align: center;
+        font-size: 12px;
+        margin-bottom: 25px;
+        font-weight: 600;
+
+    }
+    .play-section{
+        margin-top: 80px;
+    }
+
+
+    .play-section-img-2 .img-3{
+        position: relative;
+        right: 10px;
+        max-width: 90%;
+    }
+    .play-section-img-2 .img-4{
+        position: absolute;
+        right: -15px;
+        bottom: -50px;
+        max-width: 45%;
+        
+    }
+    .play-section-content-2 h1{
+        font-size: 25px ;
+        font-weight: 600;
+    }
+    .play-section-content-2 p{
+        text-align: center;
+        font-size: 12px;
+        margin-bottom: 25px;
+        font-weight: 600;
+        width: 250px;
+
+    }
+    .play-section-2{
+        margin-top: 80px;
     }
 }
