--- a/style.css
+++ b/style.css
@@ -243,3 +243,84 @@ nav {
     display: flex;
     gap: 20px;
 }
+
+/* play section-1 css */
+.play-section-1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.play-section-content{
+    text-align: right;
+    width: 35%;
+}
+.play-section-content h1{
+    font-size: 48px ;
+    font-weight: 700;
+    color: #0B0223;
+}
+.play-section-content h1 span{
+    color: #ea4abc;
+}
+.play-section-content p{
+    line-height: 30px;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    color: #534C64;
+    margin-top: 20px;
+}
+.play-section-img {
+    position: relative;
+}
+.play-section-img .img-1{
+    width: 100%;
+}
+.play-section-img .img-2{
+    position: absolute;
+    left: -150px;
+    bottom: -70px;
+    
+}
+
+/* play section 2 css */
+.play-section-2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 200px;
+}
+.play-section-content-2{
+    text-align: left;
+    width: 35%;
+}
+.play-section-content-2 h1{
+    font-size: 48px ;
+    font-weight: 700;
+    color: #0B0223;
+    width: 426px;
+}
+.play-section-content-2 h1 span{
+    color: #ea4abc;
+}
+.play-section-content-2 p{
+    line-height: 30px;
+    text-align: left;
+    width: 483px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #534C64;
+    margin-top: 20px;
+}
+.play-section-img-2 {
+    position: relative;
+}
+.play-section-img-2 .img-3{
+    width: 90%;
+}
+.play-section-img-2 .img-4{
+    position: absolute;
+    right: -70px;
+    bottom: -85px;
+    
+}
