--- a/responciv.css
+++ b/responciv.css
@@ -127,6 +127,35 @@
         max-width: 35%;
         
     }
+    /* career section tablet responsive */
+    .career-section-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .career-content{
+        width: 100%;
+        padding: 100px 70px;
+    }
+    .career-img{
+        width: 100%;
+    }
+    .career-img img{
+        max-width: 100%;
+        height: auto;
+        padding-bottom: 80px;
+    }
+    .career-content h1{
+        font-size: 35px;
+    }
+    .career-content p{
+        font-size: 15px;
+    }
+    .inner-left h4{
+        font-size: 15px;
+    }
+    .inner-right h4{
+        font-size: 15px;
+    }
 }
 
 
@@ -296,5 +325,30 @@
     }
     .play-section-2{
         margin-top: 80px;
+    }
+
+    /* career section mobile responsive */
+    .career-content{
+        width: 100%;
+        padding: 100px 0;
+    }
+    .career-content h1{
+        font-size: 30px;
+    }
+    .career-content p{
+        font-size: 12px;
+        font-weight: 400;
+    }
+    .inner-left h4{
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .inner-right h4{
+        font-size: 12px;
+        font-weight: 500;
+    }
+    .career-img img{
+        max-width: 355px;
+        height: auto;
     }
 }
