--- a/responciv.css
+++ b/responciv.css
@@ -156,6 +156,26 @@
     .inner-right h4{
         font-size: 15px;
     }
+    
+    /* feature btn responsive */
+    .feature-btn-container{
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-top: 50px;
+        margin-bottom: 80px;
+        box-sizing: border-box;
+        gap: 10px;
+      }
+      .feature-btn img{
+        width: 40px;
+        height: 40px;
+    }
+    .feature-btn p{
+        font-size: 14px;
+        font-weight: 500;
+        color:#0B0223 ;
+    }
 }
 
 
@@ -201,9 +221,9 @@
         font-weight: 600;
     }
 
-    .container {
+    /* .container {
         padding: 0 50px;
-    }
+    } */
 
     .banner {
         display: flex;
@@ -249,9 +269,9 @@
         width: 100%;
     }
 
-    .container {
+    /* .container {
         padding: 0 50px;
-    }
+    } */
 
     /* online game section mobile responsive */
     .games-2, .games-1 {
@@ -351,4 +371,24 @@
         max-width: 355px;
         height: auto;
     }
+
+    /* feature btn mobile responsive */
+    .feature-btn img{
+        width: 25px;
+        height: 25px;
+    }
+    .feature-btn p{
+        font-size: 10px;
+        font-weight: 400;
+        color:#0B0223 ;
+    }
+    .feature-btn{
+        gap: 5px;
+    }
+    .feature-btn-container{
+        gap:0px;
+        margin-top: 0px;
+        margin-bottom: 50px;
+          
+      }
 }
