--- a/style.css
+++ b/style.css
@@ -429,3 +429,59 @@ nav {
     font-weight: 600;
     color:#0B0223 ;
 }
+
+/* footer css */
+footer{
+    background-color: #0B0223;
+    text-align: center;
+    padding-top: 70px;
+    padding-bottom: 50px;
+}
+.footer-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    
+}
+.footer-logo h3{
+    font-size: 45px;
+    font-weight: 700;
+    color: #fff;
+    
+}
+.footer-logo h3 span{
+    color: #ff42a5;
+}
+.footer-manue-1,.footer-manue-2 {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    margin: 50px 0;
+}
+.footer-manue-1 li a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    transition: .5s;
+}
+.footer-manue-1 li a:hover{
+    color: #ea4abc;
+}
+.social-icon{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+.footer-manue-2 li a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+}
+.copyright-text{
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.60);
+    font-weight: 500;
+}
