--- a/style.css
+++ b/style.css
@@ -250,6 +250,44 @@ nav {
     gap: 20px;
 }
 
+.hover-overlay img{
+    display: block;
+    height: auto;
+}
+.hover-overlay{
+   position: relative;
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(26, 26, 26, 0.65);
+    border-radius: 10px;
+    opacity: 0;
+    transition: .5s;
+    cursor: pointer;
+}
+.overlay img{
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    transition: .7s;
+}
+.overlay p{
+    position: relative;
+    top: 55%;
+    left: 30%;
+    font-size: 20px;
+    font-weight: 600;
+    color: #F948B2;
+    
+}
+.hover-overlay:hover .overlay{
+    opacity: 1;
+    border: 3px solid #F948B2;
+} 
 /* play section-1 css */
 .play-section-1{
     display: flex;
