--- a/responciv.css
+++ b/responciv.css
@@ -1,4 +1,10 @@
 @media screen and (max-width:780px) {
+    body{
+        width: 100vw;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
+    
     .nav-container {
         flex-direction: column;
         align-items: center;
@@ -205,6 +211,11 @@
 
 
 @media screen and (max-width:425px) {
+    body{
+        width: 100vw;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
     .nav-manue {
         flex-direction: column;
         align-items: center;
