--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+
 }
 
 body {
@@ -11,13 +13,15 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    overflow-x: hidden;
+ 
 }
-
-.container {
+.container{
     max-width: 1400px;
     margin: 0 auto;
-    padding: 0 25px;
 }
+
+
 
 /* header css */
 
@@ -128,7 +132,7 @@ nav {
 .comon-button {
     padding: 18px 40px;
     border-radius: 48px;
-    border: none;
+    border: 2px solid #fff;
     text-decoration: none;
     color: #fff;
     font-size: 20px;
@@ -144,10 +148,26 @@ nav {
 .button-1 {
     background-color: #ff42a5;
     margin-right: 20px;
+    transition: .5s;
+}
+.button-1:hover{
+    background-color: #fff;
+    border-color: #ff42a5;
+}
+.button-1:hover a{
+    color:#ff42a5 ;  
 }
 
 .button-2 {
     background-color: #4ec5f7;
+    transition: .5s;
+}
+.button-2:hover{
+    background-color: #fff;
+    border-color: #4ec5f7;
+}
+.button-2:hover a{
+    color:#4ec5f7 ;  
 }
 
 .banner-right img {
@@ -204,10 +224,13 @@ nav {
 }
 
 /* online game section css */
-.game-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+ .game-container {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 15px;
+    justify-content: center;
+    justify-content: center;
+    overflow: hidden;
     
 }
 
@@ -224,7 +247,9 @@ nav {
 
 .gam-cart {
     text-align: left;
+    overflow-x: hidden;
 }
+
 
 .online-game h1 {
     font-size: 48px;
@@ -245,13 +270,8 @@ nav {
     color: #534C64;
     line-height: 30px;
 }
-.games-2, .games-1 {
-    display: flex;
-    gap: 20px;
-}
 
-.hover-overlay img{
-    display: block;
+ .hover-overlay img{
     height: auto;
 }
 .hover-overlay{
@@ -289,7 +309,7 @@ nav {
 .hover-overlay:hover .overlay{
     opacity: 1;
     border: 3px solid #F948B2;
-} 
+}  
 /* play section-1 css */
 .play-section-1{
     display: flex;
@@ -374,7 +394,7 @@ nav {
 /* career section css */
 .career-section{
     background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
-    margin-top: 200px;
+    margin-top: 100px;
     margin-bottom: 100px;
 }
 .career-section-container{
@@ -525,3 +545,63 @@ footer{
     color: rgba(255, 255, 255, 0.60);
     font-weight: 500;
 }
+
+/* nice-game-section css */
+ .image-grid img {
+    width: 100%;
+    height: 100%;
+}
+.nice-game-section{
+    margin-top:230px ;
+}
+
+.img-1 {
+    grid-area: a;
+}
+
+.img-2 {
+    grid-area: f;
+}
+
+.img-3 {
+    grid-area: d;
+}
+
+.img-4 {
+    grid-area: c;
+}
+
+.img-5 {
+    grid-area: e;
+}
+
+.img-6 {
+    grid-area: b;
+}
+
+.image-grid {
+    display: grid;
+    grid-template-areas: 
+    "a a a a b b b b c c c c"
+    "a a a a d d d d c c c c"
+    "f f f f f f e e e e e e";
+    gap: 10px;
+
+}
+.nice-game-section h1{
+    font-size: 40px;
+    font-weight: 700;
+    color: #0B0223;
+    text-align: center;
+}
+.nice-game-section h1 span{
+    color: #ea4abc;
+}.nice-game-section p{
+    text-align: center;
+    width: 400px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #534C64;
+    line-height: 30px;
+    margin: 25px auto;
+} 
